<?xml version="1.0" encoding="utf-8"?>
<!-- 
	This file is part of Gavel for Android.

    Gavel for Android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Gavel for Android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Gavel for Android.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>
	
    <!--  app strings -->
    <string name="app_name">Gavel</string>
    <string name="disclaimer">All of the rules that apply to the <a href="http://goo.gl/x7JZi">City of Hamilton bylaw enforcement form</a> apply here (it\'s the same form, after all!) </string>
    
    <!--  Strings for menu items -->
    <string name="menu_personal_info">Edit Your Information</string>
    <string name="about">About</string>
    <string name="send_complaint">Send Complaint</string>
    
    <!-- Strings for Complaint form -->
    <string name="header_complaint_location">Location/Address of Complaint</string>
    <string name="hint_complaint_first_name">first name (optional)</string>
    <string name="hint_complaint_last_name">last name (optional)</string>
    <string name="hint_set_location">Set Location</string>
    <string name="header_complaint">Complaint</string>
    <string name="hint_complaint_details">describe your complaint</string>
    
    <string name="location_arrow_content_description">get location of complaint from gps or network</string>
    
    
    <!-- Strings for Personal Information -->
    <string name="header_name">Name</string>
    <string name="hint_first_name">first name</string>
    <string name="hint_last_name">last name</string>
    
    <string name="header_contact_info">Contact Info</string>
    <string name="hint_primary_phone">prim. phone</string>
    <string name="hint_secondary_phone">2nd phone (optional)</string>
    <string name="hint_email_address">email address</string>
    
    <string name="header_address">Address</string>
    <string name="hint_street_address">street address</string>
    <string name="hint_postal_code">postal code</string>
    
    
    
    <string name="about_text">
        Gavel for Android was developed by Anton Lodder, and is based on Adrian Duyzer\'s web / iOS app, <a href="https://github.com/adriand/gavel">Gavel</a>. This application is not directly affiliated with the <a href="http://www.hamilton.ca/index.htm">City of Hamilton</a>. Gavel is open-source software, distributed under GPL3. See the <a href="http://www.gnu.org/licenses">GNU General Public License </a> for more details.</string>
    <string-array name="cities">
        <item>Hamilton</item>
        <item>Ancaster</item>
        <item>Dundas</item>
        <item>Stoney Creek</item>
        <item>Flamborough</item>
        <item>Glanbrook</item>
    </string-array>
    
     <string-array name="complaints">
        <item>select a complaint</item>
        <item>Barking Dogs</item>
        <item>Business Licences</item>
        <item>Dog Feces</item>
        <item>Exterior Property Maintenance</item>
        <item>Garbage and Debris</item>
        <item>Garbage Dumping</item>
        <item>Illegal use of Property</item>
        <item>Interior Property Maintenance</item>
        <item>Long Grass</item>
        <item>Noise</item>
        <item>Potential Vacant Building</item>
        <item>Signs</item>
        <item>Snow and Ice</item>
        <item>Other...</item>
    </string-array>
    
     <string-array name = "complaint_submit_vals">
        <item ></item>
        <item>Barking Dogs</item>
        <item>Business Licences</item>
        <item>Dog feces (accumulation in residential backyard)</item>
        <item>Exterior Property Maintenance (roof, windows, doors etc. that are broken or in need of major repair)</item>
        <item>Garbage and Debris (residential and/or commercial properties)</item>
        <item>Garbage dumping (garbage dumped on public properties or back alleys, ditches etc.)</item>
        <item>Illegal use of property (zoning)</item>
        <item>Interior Property Maintenance (rental properties)</item>
        <item>Long grass (more than 8 inches)</item>
        <item>Noise (only noise during the day due to construction projects, large machines or equipment etc.)</item>
        <item>Potential Vacant Building</item>
        <item>Signs</item>
        <item>Snow and Ice (snow or ice that hasn\'t been cleared within 24 hours of a snow fall)</item>
        <item>Other</item>
     </string-array>

</resources>