<?xml version="1.0" encoding="utf-8"?>
<!-- 
	This file is part of Gavel for Android.

    Gavel for Android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Gavel for Android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Gavel for Android.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GavelMain"
    android:orientation="vertical"
    android:padding="10dp"
    >
    
    <TextView 
        style="@style/personal_info_title"
        android:text="@string/header_name"
		/>
    <EditText 
        android:id="@+id/first_name"
        style="@style/personal_info"
        android:hint="@string/hint_first_name"
        android:inputType="textCapSentences"
        />
    <EditText 
        android:id="@+id/last_name"
        style="@style/personal_info"
        android:hint="@string/hint_last_name"
        android:inputType="textCapSentences"
        />
    
    <TextView 
        style="@style/personal_info_title"
        android:text="@string/header_contact_info"
        />
    <LinearLayout 
        style="@style/personal_info"
        android:orientation="horizontal" 
        android:paddingTop="6dp"  
        >     
        <EditText 
	        android:id="@+id/primary_phone"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:hint="@string/hint_primary_phone"
	        android:inputType="phone"
	        />
        <EditText 
	        android:id="@+id/secondary_phone"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:hint="@string/hint_secondary_phone"
	        android:inputType="phone"
	        />
	        
    </LinearLayout>
    
    <EditText
        android:id="@+id/email_address"
        style="@style/personal_info"
        android:hint="@string/hint_email_address"
        android:inputType="textEmailAddress"
        />
    
    
    
    
    <TextView 
        style="@style/personal_info_title"
        android:text="@string/header_address"
		/>
    <EditText
        android:id="@+id/street_address"
        style="@style/personal_info"
        android:hint="@string/hint_street_address"
        android:inputType="textCapWords"
        />
    
    <EditText
        android:id="@+id/postal_code"
        style="@style/personal_info"
        android:hint="@string/hint_postal_code"
        android:inputType="textCapCharacters"
        android:imeOptions="actionDone"
        />
    
    <Spinner
        android:id="@+id/personal_cities_spinner"
        style="@style/personal_info"
        />
    
    
       
</LinearLayout>

</ScrollView>