<?xml version="1.0" encoding="utf-8"?>
<!-- 
	This file is part of Gavel for Android.

    Gavel for Android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Gavel for Android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Gavel for Android.  If not, see <http://www.gnu.org/licenses/>.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    
<LinearLayout 
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GavelMain"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingBottom="10dp"
        >
	    <TextView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/header_complaint_location"
	        android:textStyle="bold"
	        android:paddingTop="10dp"
	        style="@android:style/Theme.Black"
	        />
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
	        
	         <EditText
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:hint="@string/hint_complaint_first_name"
		        android:inputType="textCapWords"
		        android:id="@+id/complaint_first_name" 
		        android:singleLine="true"		        
        		android:imeOptions="actionNext"
		        android:fadingEdge="horizontal"/>
	          <EditText
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:hint="@string/hint_complaint_last_name"
		        android:inputType="textCapWords"
		        android:id="@+id/complaint_last_name"
		        android:singleLine="true"
		        
        android:imeOptions="actionNext"
		        android:ellipsize="end" />
	        
	    </LinearLayout>
	    
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal">
		    <EditText
		        android:layout_width="0dp"
		        android:layout_height="40dp"
		        android:layout_weight="1"
		        android:gravity="center_vertical"
		        android:hint="@string/hint_set_location"
		        android:inputType="textCapWords"
		        android:layout_marginRight="10dp"
		        android:id="@+id/complaint_address" />
		    
		    <ImageButton 
		        android:layout_width="40dp"
		        android:layout_height="40dp"
		        android:id="@+id/location_button"
		        android:padding="2dp"
		        android:src="@drawable/location_arrow"
		        />   
		</LinearLayout>
		<Spinner
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/cities_spinner"
	        style="@android:style/Theme.Black"	/>
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_complaint"
        android:textStyle="bold"
		style="@android:style/Theme.Black"
        android:paddingTop="10dp"/>
    
    <Spinner 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:id="@+id/complaint_spinner" />

    <EditText
        android:id="@+id/complaint_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="top"
        android:inputType="textCapSentences"
        android:imeOptions="actionDone"
        android:hint="@string/hint_complaint_details" >


    </EditText>
    
    <TextView 
        android:id="@+id/disclaimer_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:paddingTop="2dp"
        android:text="@string/disclaimer" />
    
    </LinearLayout>
</LinearLayout>

</ScrollView>